--- a/day1/mlnotebook.ipynb
+++ b/day1/mlnotebook.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -632,15 +632,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1487, 10)\n",
-      "(1487,)\n"
+      "Dimensions: X: (1487, 10), Y: (1487,)\n"
      ]
     }
    ],
    "source": [
     "# Print the dimensions of X and y\n",
-    "print X.shape\n",
-    "print Y.shape"
+    "print \"Dimensions: X: %s, Y: %s\" % (X.shape, Y.shape)"
    ]
   },
   {
@@ -665,13 +663,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['high', 500],\n",
+       "       ['low', 987]], dtype=object)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Print the y frequencies"
+    "# Print the y frequencies\n",
+    "scipy.stats.itemfreq(Y)"
    ]
   },
   {
